Speed Improvement with Batch Insert
Batch를 활용한 Insert문 통합. 비약적인 속도 개선